--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   
   get: ^4.6.5
   flutter_svg: ^1.0.3
+  intl: ^0.18.1
   
 
 dev_dependencies:
@@ -25,6 +26,7 @@ flutter:
   assets:
     - semuaAsset/
     - semuaAsset/gambar/awal.png
+    - semuaAsset/gambar/home.png
     
     
 
