--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
     - semuaAsset/
     - semuaAsset/gambar/awal.png
     - semuaAsset/gambar/home.png
+    - semuaAsset/gambar/kelola.png
     
     
 
