--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   get: ^4.6.5
   flutter_svg: ^1.0.3
   intl: ^0.18.1
+  date_picker_timeline: ^1.2.5
+  animated_text_kit: ^4.2.2
+  sliding_up_panel: ^2.0.0+1
+  
   
 
 dev_dependencies:
@@ -28,6 +32,7 @@ flutter:
     - semuaAsset/gambar/awal.png
     - semuaAsset/gambar/home.png
     - semuaAsset/gambar/kelola.png
+    - semuaAsset/gambar/informasi.png
     
     
 
