--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ flutter:
     - semuaAsset/gambar/home.png
     - semuaAsset/gambar/kelola.png
     - semuaAsset/gambar/informasi.png
+    - semuaAsset/gambar/home_molekul.png
+    - semuaAsset/gambar/home_ph.png
+    - semuaAsset/gambar/home_volume.png
     
     
 
