--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   horizontal_week_calendar: ^0.0.11
   http: ^0.13.5
+  shared_preferences: ^2.0.20
   
   
 
