--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^4.14.0
   firebase_storage: ^11.5.1
   cloud_firestore: ^4.13.2
+  awesome_notifications: ^0.8.2
   
   
   
