--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,12 @@ dependencies:
   horizontal_week_calendar: ^0.0.11
   http: ^0.13.5
   shared_preferences: ^2.0.20
-  firebase_core: ^2.22.0
+  firebase_core: ^2.24.0
   firebase_auth: ^4.14.0
   firebase_storage: ^11.5.1
   cloud_firestore: ^4.13.2
   awesome_notifications: ^0.8.2
+  firebase_database: ^10.3.6
   
   
   
